# 02-react-fastapi

./: .gitignore  README.md
backend/: docker-compose.yml  docker-restart.sh  pyproject.toml
backend/api/: db.py  main.py  migrate_db.py
backend/api/cruds/: done.py  task.py
backend/api/models/: task.py
backend/api/routers/: done.py  task.py
frontend/app/: package-lock.json  package.json
frontend/app/src/: index.tsx
frontend/app/src/components/: App.tsx  DoneItem.tsx  DoneList.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx
frontend/app/src/lib/api/: client.tsx  done.tsx  task.tsx
frontend/app/src/types/: tasks.tsx
